# chrome-on-device-ml

./: .gitignore
android/app/: build.gradle  download.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: url_list.txt
android/app/src/main/java/org/chrome/device/ml/: ChromeActivity.java
android/app/src/main/java/org/chrome/device/ml/chrome/: CustomTabActivity.java  CustomTabActivityHelper.java  CustomTabHandler.java  CustomTabsHelper.java  KeepAliveService.java  ServiceConnection.java  ServiceConnectionCallback.java
android/app/src/main/java/org/chrome/device/ml/experiments/: Experiment.java  MobileBertExperiment.java
android/app/src/main/java/org/chrome/device/ml/ml/: QaClient.java
android/app/src/main/java/org/chrome/device/ml/service/: MLService.java  MLServiceBackground.java
android/app/src/main/res/layout/: content_main.xml
android/app/src/main/res/values/: strings.xml
experimental/tflite/: CMakeLists.txt
