CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(tflite_test CXX)

SET(CFILES  minimal.cc)

ADD_EXECUTABLE(${PROJECT_NAME} ${CFILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC $ENV{HOME}/tensorflow)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC $ENV{HOME}/tensorflow/third_party/flatbuffers/include)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR})
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/libs)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/libs/libtensorflow.so)
